# Adapted from:
# https://github.com/gregdurrett/nyu-llm-reasoners-a2
#
# This file is used only for uv-based environment and dependency setup.
# The FlashAttention implementation, benchmarking logic, experiments,
# and analysis in this repository are our own work.

[project]
name = "flashattention-final-project"
version = "0.1.0"
description = "Final project on optimizing standard attention computation with Triton-based FlashAttention"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "triton; sys_platform == 'linux'",
    "setuptools",
    "numpy",
    "pandas>=2",
    "matplotlib",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = false
python-preference = "managed"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]